homepage done for now

--- a/index.html
+++ b/index.html
@@ -19,17 +19,28 @@
             <div id="main-layout"></div>
             <p>Aphrodite Rendering <i>Procreate, iPad</i></p>
         </div>
-        <div id="card">
-            <h2>Gallery</h2>
-            <p>Come see some of my proudest work.</p>
-        </div>
-        <div id="cards">
-            <h2>Contact</h2>
-            <p>Find out the best ways to contact me.</p>
-        </div>
-        <div id="cards">
-            <h2>About</h2>
-            <p>Learn all about me.</p>
+
+        <div id="card-section">
+            <div class="column contain">
+                <div id="cards">
+                    <a href="contact.html">
+                        <h2>Contact</h2>
+                    </a>
+                    <p>Find out the best ways to contact me.</p>
+                </div>
+                <div id="cards">
+                    <a href="gallery.html">
+                        <h2>Gallery</h2>
+                    </a>
+                    <p>Come see some of my proudest work.</p>
+                </div>
+                <div id="cards">
+                    <a href="about.html">
+                        <h2>About</h2>
+                    </a>
+                    <p>Learn all about me.</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
