--- a/gallery.html
+++ b/gallery.html
@@ -38,6 +38,15 @@
                 <img src="images/pic7.jpg" alt="shapes">
                     <p class="title">Value Scale Drawing</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
+                <img src="images/jonnypic.jpg" alt="photography">
+                    <p class="title">Photography Portrait</p>
+                    <p class="small-text"><i>Adobe Lightroom, Photoshop</i></p>
+                <img src="images/illustrations.jpg" alt="figures">
+                    <p class="title">Figure Illustrations</p>
+                    <p class="small-text"><i>Adobe Illustrator</i></p>
+                <img src="images/Screenshot 2023-09-06 at 6.57.12 AM.png" alt="font">
+                    <p class="title">Custom Font</p>
+                    <p class="small-text"><i>BirdFont</i></p>
             </div>
             <h3>Personal Projects</h3>
             <div class="mixed-layout">
