--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,9 @@
                 <img src="images/Screenshot 2023-09-06 at 6.57.12 AM.png" alt="font">
                     <p class="title">Custom Font</p>
                     <p class="small-text"><i>BirdFont</i></p>
+                <img src="images/illustrations.jpg" alt="figures">
+                    <p class="title">Figure Illustrations</p>
+                    <p class="small-text"><i>Adobe Illustrator</i></p>
             </div>
             <h3>Personal Projects</h3>
             <div class="mixed-layout">
