--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
                 <img src="images/illustrations.jpg" alt="figures">
                     <p class="title">Figure Illustrations</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
-                <img src="images/Screenshot 2023-09-06 at 6.57.12 AM.png" alt="font">
+                <img src="images/Screenshot 2023-09-06 at 6.57.12 AM.png" alt="">
                     <p class="title">Custom Font</p>
                     <p class="small-text"><i>BirdFont</i></p>
                 <img src="images/illustrations.jpg" alt="figures">
