--- a/exercises/hover-galleries/index.html
+++ b/exercises/hover-galleries/index.html
@@ -7,18 +7,14 @@
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
-        <div id="hover-gallery-1">
+        <div class="container">
             <div class="card">
-                <h2>一</h2>
-            </div>
-            <div class="card">
-                <h2>二</h2>
-            </div>
-            <div class="card">
-                <h2>三</h2>
-            </div>
-            <div class="card">
-                <h2>四</h2>
+                <div class="imgbox">
+                    <img src="images/cat1.jpg" alt="cat1">
+                </div>
+                <div class="content">
+                    <h1>Orange Kitty</h1>
+                </div>
             </div>
         </div>
     </body>
