--- a/exercises/dropdown-menu-site/index.html
+++ b/exercises/dropdown-menu-site/index.html
@@ -13,7 +13,7 @@
             <div class="dropdown-contain">
                 <a href="#">Adopt <i class= "fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
-                    <a href="#">Hunter</a>
+                    <a href="hunter.html">Hunter</a>
                     <a href="#">Miller</a>
                     <a href="#">Stella</a>
                 </div>
