--- a/exercises/dropdown-menu-site/index.html
+++ b/exercises/dropdown-menu-site/index.html
@@ -9,13 +9,13 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz</a>
+            <a id="logo" href="index.html">AdoptMePlz</a>
             <div class="dropdown-contain">
                 <a href="#">Adopt <i class= "fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
                     <a href="hunter.html">Hunter</a>
-                    <a href="#">Miller</a>
-                    <a href="#">Stella</a>
+                    <a href="miller.html">Miller</a>
+                    <a href="stella.html">Stella</a>
                 </div>
             </div>
             <a href="#">Volunteer</a>
