--- a/exercises/dropdown-menu-site/stella.html
+++ b/exercises/dropdown-menu-site/stella.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz</a>
+            <a id="logo" href="index.html">AdoptMePlz</a>
             <div class="dropdown-contain">
                 <a href="#">Adopt <i class= "fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
@@ -20,6 +20,13 @@
             </div>
             <a href="#">Volunteer</a>
             <a href="#">Donate</a>
+        </div>
+        <div id="center-column">
+            <h2>Stella</h2>
+            <img src="images/stella.jpg" alt="stella">
+            <p>
+                Stella is extremely playful, cuddly, and loving. She will run around for hours before napping the rest of the day. She has convinced herself that she is a lapdog, and will try climbing into your lap during all hours of the day. Adopt this angel today!
+            </p>
         </div>
     </body>
 </html>
