--- a/exercises/dropdown-menu-site/hunter.html
+++ b/exercises/dropdown-menu-site/hunter.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz</a>
+            <a id="logo" href="index.html">AdoptMePlz</a>
             <div class="dropdown-contain">
                 <a href="#">Adopt <i class= "fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
