--- a/exercises/dropdown-menu-site/miller.html
+++ b/exercises/dropdown-menu-site/miller.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz</a>
+            <a id="logo" href="index.html">AdoptMePlz</a>
             <div class="dropdown-contain">
                 <a href="#">Adopt <i class= "fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
@@ -20,6 +20,13 @@
             </div>
             <a href="#">Volunteer</a>
             <a href="#">Donate</a>
+        </div>
+        <div id="center-column">
+            <h2>Miller</h2>
+            <img src="images/miller.jpg" alt="miller">
+            <p>
+                Miller is the most regal Beagle we have ever had the pleasure of knowing! He loves everyone and everything, and has convinced himself that he's the main character. If you like relaxing, lazy days, Miller is the dog for you.
+            </p>
         </div>
     </body>
 </html>
