--- a/exercises/e-commerce-site/index.html
+++ b/exercises/e-commerce-site/index.html
@@ -27,7 +27,18 @@
         <div id="hero">
             <div class="hero-content">
                 <h2>Enjoy 10% Off!</h2>
-                <h4>Click Here</h4>
+                <h4> <a href="#">Click Here</a></h4>
+            </div>
+        </div>
+        <div id="sections">
+            <div id="on-sale-prod">
+                <h2>On Sale Products</h2>
+            </div>
+            <div id="feat-prod">
+                <h2>Featured Products</h2>
+            </div>
+            <div id="creator-showcase">
+                <h2>Creator Showcase</h2>
             </div>
         </div>
     </body>
