--- a/exercises/e-commerce-site/index.html
+++ b/exercises/e-commerce-site/index.html
@@ -31,14 +31,32 @@
             </div>
         </div>
         <div id="sections">
+            <h2>On Sale Products</h2>
             <div id="on-sale-prod">
-                <h2>On Sale Products</h2>
+                <img src="images/onsale1.webp" alt="onsale">
+                <img src="images/onsale2.webp" alt="onsale">
+                <img src="images/onsale3.webp" alt="onsale">
+                <img src="images/onsale4.webp" alt="onsale">
+                <img src="images/onsale5.webp" alt="onsale">
+                <img src="images/onsale6.webp" alt="onsale">
             </div>
+            <h2>Featured Products</h2>
             <div id="feat-prod">
-                <h2>Featured Products</h2>
+                <img src="https://i.etsystatic.com/22802056/c/2290/2290/342/440/il/1d3bfd/3970117646/il_600x600.3970117646_34zc.jpg" alt="feat">
+                <img src="https://i.etsystatic.com/38145326/c/1038/1038/621/327/il/41ad0f/5079816967/il_600x600.5079816967_byrq.jpg" alt="feat">
+                <img src="https://i.etsystatic.com/9696294/c/1993/1993/0/911/il/d8c2df/4886677713/il_600x600.4886677713_i9mb.jpg" alt="feat">
+                <img src="https://i.etsystatic.com/16464138/r/il/ba5e6e/4916603714/il_600x600.4916603714_rlt0.jpg" alt="feat">
+                <img src="https://i.etsystatic.com/32692918/c/2400/2400/0/70/il/c635bf/3848706199/il_600x600.3848706199_8fv3.jpg" alt="feat">
+                <img src="https://i.etsystatic.com/12387557/c/2434/2434/0/166/il/dab388/4710233064/il_600x600.4710233064_b5s1.jpg" alt="feat">
             </div>
+            <h2>Creator Showcase</h2>
             <div id="creator-showcase">
-                <h2>Creator Showcase</h2>
+                <img src="" alt="creator">
+                <img src="" alt="creator">
+                <img src="" alt="creator">
+                <img src="" alt="creator">
+                <img src="" alt="creator">
+                <img src="" alt="creator">
             </div>
         </div>
     </body>
