--- a/exercises/e-commerce-site/index.html
+++ b/exercises/e-commerce-site/index.html
@@ -61,7 +61,19 @@
         </div>
         <div id="footer">
             <div class="foot-nav">
-                
+                <h3>Shop</h3>
+                <a href="#">Gift Cards</a>
+                <a href="#">IndigoSphere Registry</a>
+                <a href="#">Sitemap</a>
+            </div>
+                <h3>Sell</h3>
+                <a href="#">Sell on IndigoSphere</a>
+                <a href="#">Affiliates</a>
+                <a href="#">Creators</a>
+                <h3>About</h3>
+                <a href="#">Policies</a>
+                <a href="#">Investors</a>
+                <a href="#">Careers</a>
             </div>
         </div>
     </body>
