--- a/exercises/e-commerce-site/index.html
+++ b/exercises/e-commerce-site/index.html
@@ -59,20 +59,23 @@
                 <img src="https://ih1.redbubble.net/image.4922459745.6147/mug,travel,x600,center-pad,600x600,f8f8f8.jpg" alt="creator">
             </div>
         </div>
-        <div id="footer">
-            <div class="foot-nav">
+        <div id="foot-layout">
+            <div id="footer1">
                 <h3>Shop</h3>
                 <a href="#">Gift Cards</a>
                 <a href="#">IndigoSphere Registry</a>
                 <a href="#">Sitemap</a>
             </div>
+            <div id="footer2">
                 <h3>Sell</h3>
                 <a href="#">Sell on IndigoSphere</a>
                 <a href="#">Affiliates</a>
                 <a href="#">Creators</a>
+            </div>
+            <div id="footer3">
                 <h3>About</h3>
+                <a href="#">IndigoSphere, INC.</a>
                 <a href="#">Policies</a>
-                <a href="#">Investors</a>
                 <a href="#">Careers</a>
             </div>
         </div>
