okay not bad web

--- a/exercises/e-commerce-site/index.html
+++ b/exercises/e-commerce-site/index.html
@@ -60,19 +60,19 @@
             </div>
         </div>
         <div id="foot-layout">
-            <div id="footer1">
+            <div id="footer">
                 <h3>Shop</h3>
                 <a href="#">Gift Cards</a>
                 <a href="#">IndigoSphere Registry</a>
                 <a href="#">Sitemap</a>
             </div>
-            <div id="footer2">
+            <div id="footer">
                 <h3>Sell</h3>
                 <a href="#">Sell on IndigoSphere</a>
                 <a href="#">Affiliates</a>
                 <a href="#">Creators</a>
             </div>
-            <div id="footer3">
+            <div id="footer">
                 <h3>About</h3>
                 <a href="#">IndigoSphere, INC.</a>
                 <a href="#">Policies</a>
