--- a/exercises/e-commerce-site/index.html
+++ b/exercises/e-commerce-site/index.html
@@ -4,24 +4,30 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>E-Commerce Site</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
         <div id="header">
             <div id="navbar">
                 <div class="logo">IndigoSphere</div>
-                <div class="links">
-                    <a href="#">Explore Designs</a>
-                    <a href="#">Clothing</a>
-                    <a href="#">Jewelry</a>
-                    <a href="#">Home & Living</a>
-                    <a href="#">Kids & Babies</a>
-                    <a href="#">Pets</a>
-                    <a href="#">Personalized Gifts</a>
-                    <a href="#">Weddings</a>
-                    <a href="#">Birthdays</a>
-                    <a href="#">On Sale</a>
+                <div class="dropdown-contain">
+                    <i class="fa-solid fa-bars" style="color: #000000;"></i>
+                    <div class="dropdown-menu">
+                        <a href="#">Explore Designs</a>
+                        <a href="#">Clothing</a>
+                        <a href="#">Jewelry</a>
+                        <a href="#">Home & Living</a>
+                        <a href="#">Kids & Babies</a>
+                        <a href="#">Pets</a>
+                        <a href="#">Personalized Gifts</a>
+                        <a href="#">Weddings</a>
+                        <a href="#">Birthdays</a>
+                        <a href="#">On Sale</a>
+                    </div>
                 </div>
+                <a href="#">Volunteer</a>
+                <a href="#">Donate</a>
             </div>
         </div>
         <div id="hero">
