--- a/exercises/e-commerce-site/index.html
+++ b/exercises/e-commerce-site/index.html
@@ -12,7 +12,7 @@
             <div id="navbar">
                 <div class="logo">IndigoSphere</div>
                 <div class="dropdown-contain">
-                    <i class="fa-solid fa-bars" style="color: #000000;"></i>
+                    <a href="#"><i class="fa-solid fa-bars" style="color: #000000;"></i> Menu</a>
                     <div class="dropdown-menu">
                         <a href="#">Explore Designs</a>
                         <a href="#">Clothing</a>
@@ -26,8 +26,6 @@
                         <a href="#">On Sale</a>
                     </div>
                 </div>
-                <a href="#">Volunteer</a>
-                <a href="#">Donate</a>
             </div>
         </div>
         <div id="hero">
