--- a/e-comm-web/index.html
+++ b/e-comm-web/index.html
@@ -25,5 +25,61 @@
                     <a href="#">On Sale</a>
                 </div>
             </div>
+        </div>
+        <div id="hero">
+            <div class="hero-content">
+                <h2>Enjoy 10% Off!</h2>
+                <h4> <a href="#">Click Here</a></h4>
+            </div>
+        </div>
+        <div id="sections">
+            <h2>On Sale Products</h2>
+            <div id="on-sale-prod">
+                <img src="https://i.etsystatic.com/34675021/c/2330/2330/159/19/il/8a6e28/4295506733/il_600x600.4295506733_olga.jpg" alt="onsale">
+                <img src="https://i.etsystatic.com/19721640/c/3000/3000/0/0/il/aa8a88/2559228893/il_600x600.2559228893_dav1.jpg" alt="onsale">
+                <img src="https://i.etsystatic.com/27246226/r/il/6b0d73/3422441830/il_600x600.3422441830_2ffc.jpg" alt="onsale">
+                <img src="https://i.etsystatic.com/34523747/r/il/349b4b/5288405225/il_600x600.5288405225_qp0u.jpg" alt="onsale">
+                <img src="https://i.etsystatic.com/35966576/c/2078/2078/425/0/il/635675/4033819161/il_600x600.4033819161_5o80.jpg" alt="onsale">
+                <img src="https://i.etsystatic.com/9848833/c/1500/1500/262/0/il/4cdc94/3393697573/il_600x600.3393697573_elq7.jpg" alt="onsale">
+            </div>
+            <h2>Featured Products</h2>
+            <div id="feat-prod">
+                <img src="https://i.etsystatic.com/22802056/c/2290/2290/342/440/il/1d3bfd/3970117646/il_600x600.3970117646_34zc.jpg" alt="feat">
+                <img src="https://i.etsystatic.com/38145326/c/1038/1038/621/327/il/41ad0f/5079816967/il_600x600.5079816967_byrq.jpg" alt="feat">
+                <img src="https://i.etsystatic.com/9696294/c/1993/1993/0/911/il/d8c2df/4886677713/il_600x600.4886677713_i9mb.jpg" alt="feat">
+                <img src="https://i.etsystatic.com/16464138/r/il/ba5e6e/4916603714/il_600x600.4916603714_rlt0.jpg" alt="feat">
+                <img src="https://i.etsystatic.com/32692918/c/2400/2400/0/70/il/c635bf/3848706199/il_600x600.3848706199_8fv3.jpg" alt="feat">
+                <img src="https://i.etsystatic.com/12387557/c/2434/2434/0/166/il/dab388/4710233064/il_600x600.4710233064_b5s1.jpg" alt="feat">
+            </div>
+            <h2>Popular Items</h2>
+            <div id="pop-des">
+                <img src="https://ih1.redbubble.net/image.4685835072.6271/mwo,x600,iphone_6s_snap-pad,600x600,f8f8f8.u1.jpg" alt="creator">
+                <img src="https://ih1.redbubble.net/image.4148822001.7133/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="creator">
+                <img src="https://ih1.redbubble.net/image.5151347456.9395/mug,standard,x334,right-pad,600x600,f8f8f8.jpg" alt="creator">
+                <img src="https://ih1.redbubble.net/image.5190739726.4820/drawstring_bag,x600-pad,600x600,f8f8f8.jpg" alt="creator">
+                <img src="https://ih1.redbubble.net/image.1184264824.0984/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="creator">
+                <img src="https://ih1.redbubble.net/image.4922459745.6147/mug,travel,x600,center-pad,600x600,f8f8f8.jpg" alt="creator">
+            </div>
+        </div>
+        <div id="foot-layout">
+            <div id="footer">
+                <h3>Shop</h3>
+                <a href="#">Gift Cards</a>
+                <a href="#">IndigoSphere Registry</a>
+                <a href="#">Sitemap</a>
+            </div>
+            <div id="footer">
+                <h3>Sell</h3>
+                <a href="#">Sell on IndigoSphere</a>
+                <a href="#">Affiliates</a>
+                <a href="#">Creators</a>
+            </div>
+            <div id="footer">
+                <h3>About</h3>
+                <a href="#">IndigoSphere, INC.</a>
+                <a href="#">Policies</a>
+                <a href="#">Careers</a>
+            </div>
+        </div>
     </body>
 </html>
