--- a/e-comm-web/index.html
+++ b/e-comm-web/index.html
@@ -30,6 +30,7 @@
             <div class="hero-content">
                 <h2>Enjoy 10% Off!</h2>
                 <h4> <a href="#">Click Here</a></h4>
+                <p>You deserve it.</p>
             </div>
         </div>
         <div id="sections">
