--- a/foxtail-farms/index.html
+++ b/foxtail-farms/index.html
@@ -9,12 +9,18 @@
     <body>
         <div id="navbar">
             <a href="#" id="logo">
-                <img src="" alt="logo on black">
+                <img src="/foxtail-farms/images/foxtail_logos.png" alt="logo on black">
             </a>
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-            <a href="#">Link 4</a>
+            <a href="#">Science</a>
+            <a href="#">About Us</a>
+            <a href="#">Recipes</a>
+            <a href="#">Contact</a>
+            <a href="#">Market</a>
         </div>
+        <div id="paragraph">
+            <h2>Market</h2>
+            <p>We strive to offer high quality produce utilizing cutting edge technology. This innovative approach allows us to selectively cultivate the "perfect" produce.</p>
+        </div>
+        
     </body>
 </html>
