--- a/foxtail-farms/index.html
+++ b/foxtail-farms/index.html
@@ -21,6 +21,34 @@
             <h2>Market</h2>
             <p>We strive to offer high quality produce utilizing cutting edge technology. This innovative approach allows us to selectively cultivate the "perfect" produce.</p>
         </div>
-        
+        <div id="gallery">
+            <img src="/foxtail-farms/images/mark1.jpeg" alt="market" width="200" height="200">
+            <div class="name">Broccoli</div>
+            <div class="price">$10</div>
+            <img src="/foxtail-farms/images/mark2.jpeg" alt="market" width="200" height="200">
+            <div class="name">Carrots</div>
+            <div class="price">$5</div>
+            <img src="/foxtail-farms/images/mark3.jpeg" alt="market" width="200" height="200">
+            <div class="name">Tomatoes</div>
+            <div class="price">$15</div>
+            <img src="/foxtail-farms/images/mark4.jpeg" alt="market" width="200" height="200">
+            <div class="name">Raspberries</div>
+            <div class="price">$9</div>
+            <img src="/foxtail-farms/images/mark5.jpeg" alt="market" width="200" height="200">
+            <div class="name">Potatoes</div>
+            <div class="price">$5</div>
+            <img src="/foxtail-farms/images/mark6.jpeg" alt="market" width="200" height="200">
+            <div class="name">Cabbage</div>
+            <div class="price">$10</div>
+            <img src="/foxtail-farms/images/mark7.jpeg" alt="market" width="200" height="200">
+            <div class="name">Blueberries</div>
+            <div class="price">$7</div>
+            <img src="/foxtail-farms/images/mark8.jpeg" alt="market" width="200" height="200">
+            <div class="name">Strawberries</div>
+            <div class="price">$10</div>
+            <img src="/foxtail-farms/images/mark9.jpeg" alt="market" width="200" height="200">
+            <div class="name">Avocado</div>
+            <div class="price">$12</div>
+        </div>
     </body>
 </html>
