--- a/foxtail-farms/index.html
+++ b/foxtail-farms/index.html
@@ -86,5 +86,17 @@
                 </div>
             </div>
         </div>
+        <div id="footer">
+            <div class="foot-logo">
+                <img src="/foxtail-farms/images/foxtail_logos.png" alt="logo on black">
+            </div>
+            <div class="links">
+                <a href="#">Science</a>
+                <a href="#">About Us</a>
+                <a href="#">Recipes</a>
+                <a href="#">Contact</a>
+                <a href="#">Market</a>
+            </div>
+        </div>
     </body>
 </html>
