--- a/foxtail-farms/index.html
+++ b/foxtail-farms/index.html
@@ -8,14 +8,14 @@
     </head>
     <body>
         <div id="navbar">
-            <a href="#" id="logo">
+            <a href="index.html" id="logo">
                 <img src="/foxtail-farms/images/foxtail_logos.png" alt="logo on black">
             </a>
-            <a href="#">Science</a>
-            <a href="#">About Us</a>
-            <a href="#">Recipes</a>
-            <a href="#">Contact</a>
-            <a href="#">Market</a>
+            <a href="science.html">Science</a>
+            <a href="about.html">About Us</a>
+            <a href="recipes.html">Recipes</a>
+            <a href="contact.html">Contact</a>
+            <a href="index.html">Market</a>
         </div>
         <div id="paragraph">
             <h2>Market</h2>
