--- a/foxtail-farms/science.html
+++ b/foxtail-farms/science.html
@@ -24,6 +24,7 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita voluptas doloribus quas quisquam vitae necessitatibus, at tempora explicabo magnam ipsam, minus quos totam magni veritatis, quae ut repellat beatae nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam deleniti corporis natus dolor incidunt rem nostrum eum numquam doloribus, impedit in asperiores nulla vitae dolorem veritatis hic sunt nam. Reprehenderit.</p>
             <img src="/foxtail-farms/images/sci1.jpeg" alt="science">
         </div>
+        <span> <p>Learn More</p> </span>
         <div id="title">
             <h2>Natural Energy</h2>
         </div>
