--- a/foxtail-farms/about.html
+++ b/foxtail-farms/about.html
@@ -17,5 +17,13 @@
             <a href="contact.html">Contact</a>
             <a href="index.html">Market</a>
         </div>
+        <div id="about-us">
+            <h3>About Us</h3>
+            <p>Our passion for perfection bleeds into our brand. "Telios", the fox in our logo, comes from the word "perfect" in Greek; Teleios.</p>
+            <span>Shop Produce</span>
+        </div>
+        <div id="big-logo">
+            <img src="../foxtail-farms/images/foxtail_logos.png" alt="big logo on black">
+        </div>
     </body>
 </html>
