--- a/foxtail-farms/about.html
+++ b/foxtail-farms/about.html
@@ -17,13 +17,15 @@
             <a href="contact.html">Contact</a>
             <a href="index.html">Market</a>
         </div>
-        <div id="about-us">
-            <h3>About Us</h3>
-            <p>Our passion for perfection bleeds into our brand. "Telios", the fox in our logo, comes from the word "perfect" in Greek; Teleios.</p>
-            <span>Shop Produce</span>
-        </div>
-        <div id="big-logo">
-            <img src="../foxtail-farms/images/foxtail_logos.png" alt="big logo on black">
+        <div id="header">
+            <div id="about-us">
+                <h3>About Us</h3>
+                <p>Our passion for perfection bleeds into our brand. "Telios", the fox in our logo, comes from the word "perfect" in Greek; Teleios.</p>
+                <span> <a href="#">Shop Produce</a></span>
+            </div>
+            <div id="big-logo">
+                <img src="../foxtail-farms/images/foxtail_logos.png" alt="big logo on black">
+            </div>
         </div>
     </body>
 </html>
