--- a/foxtail-farms/about.html
+++ b/foxtail-farms/about.html
@@ -18,13 +18,35 @@
             <a href="index.html">Market</a>
         </div>
         <div id="header">
-            <div id="about-us">
-                <h3>About Us</h3>
+            <div class="about-us">
+                <h2>About Us</h2>
                 <p>Our passion for perfection bleeds into our brand. "Telios", the fox in our logo, comes from the word "perfect" in Greek; Teleios.</p>
                 <span> <a href="#">Shop Produce</a></span>
             </div>
-            <div id="big-logo">
+            <div class="big-logo">
                 <img src="../foxtail-farms/images/foxtail_logos.png" alt="big logo on black">
+            </div>
+        </div>
+        <div id="three-cards">
+            <div class="single-col card-contain">
+                <div class="card">
+                    <h3><i>Natural Energy</i></h3>
+                    <img src="/foxtail-farms/images/card1.jpeg" alt="card one">
+                    <p>How do we do it?</p>
+                    <a href="#">View</a>
+                </div>
+                <div class="card">
+                    <h3><i>Genetics</i></h3>
+                    <img src="/foxtail-farms/images/card2.jpeg" alt="card two">
+                    <p>Nothing but the best!</p>
+                    <a href="#">View</a>
+                </div>
+                <div class="card">
+                    <h3><i>Patents</i></h3>
+                    <img src="/foxtail-farms/images/card3.jpeg" alt="card three">
+                    <p>Qualified for you</p>
+                    <a href="#">View</a>
+                </div>
             </div>
         </div>
     </body>
