--- a/foxtail-farms/about.html
+++ b/foxtail-farms/about.html
@@ -27,6 +27,8 @@
                 <img src="../foxtail-farms/images/foxtail_logos.png" alt="big logo on black">
             </div>
         </div>
+        <span id="spacer1"> <p>○ ○ ○</p> </span>
+        <span id="spacer"> <p>Our Technology</p> </span>
         <div id="three-cards">
             <div class="single-col card-contain">
                 <div class="card">
