--- a/foxtail-farms/about.html
+++ b/foxtail-farms/about.html
@@ -40,7 +40,7 @@
                 <div class="card">
                     <h3><i>Genetics</i></h3>
                     <img src="/foxtail-farms/images/card2.jpeg" alt="card two">
-                    <p>Nothing but the best!</p>
+                    <p>Just the best!</p>
                     <a href="#">View</a>
                 </div>
                 <div class="card">
@@ -49,6 +49,28 @@
                     <p>Qualified for you</p>
                     <a href="#">View</a>
                 </div>
+            </div>
+        </div>
+        <div id="fox-tale">
+            <div class="text-image">
+                <h3>A Fox Tale</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil repellat aliquid placeat! Modi explicabo ipsum exercitationem vitae nobis quisquam, eligendi ipsam. Repellat quisquam harum corrupti ad dolorum quas ullam? Nihil. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore soluta, molestiae deleniti incidunt ipsa a sunt nihil rerum magni qui, voluptatem eaque velit fugit nobis doloribus enim laborum, explicabo eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptatibus magnam? Explicabo quos quasi quis commodi beatae, adipisci repellendus dicta voluptatem aperiam velit. Ratione ea, exercitationem dolorem incidunt commodi dolorum!</p>
+                <span> <a href="#">About Us</a> </span>
+            </div>
+            <div class="big-image">
+                <img src="/foxtail-farms/images/ingred1.jpeg" alt="ingredients">
+            </div>
+        </div>
+        <div id="footer">
+            <div class="foot-logo">
+                <img src="/foxtail-farms/images/foxtail_logos.png" alt="logo on black">
+            </div>
+            <div class="links">
+                <a href="#">Science</a>
+                <a href="#">About Us</a>
+                <a href="#">Recipes</a>
+                <a href="#">Contact</a>
+                <a href="#">Market</a>
             </div>
         </div>
     </body>
