--- a/exercises/restaurant/index.html
+++ b/exercises/restaurant/index.html
@@ -47,5 +47,29 @@
                 </a>
             </div>
        </div>
+       <div id="footer">
+        <div id="footer-columns-navbar">
+            <div>
+                <a href="#">Column 1 Link</a>
+                <a href="#">Column 1 Link</a>
+                <a href="#">Column 1 Link</a>
+                <a href="#">Column 1 Link</a>
+                <a href="#">Column 1 Link</a>
+            </div>
+            <div>
+                <a href="#">Column 2 Link</a>
+                <a href="#">Column 2 Link</a>
+                <a href="#">Column 2 Link</a>
+                <a href="#">Column 2 Link</a>
+            </div>
+        </div>
+        <div id="footer-navbar">
+            <span>&copy; FIRST 2023</span>
+            <a href="#">Footer Link 1</a>
+            <a href="#">Footer Link 2</a>
+            <a href="#">Footer Link 3</a>
+            <a href="#">Footer Link 4</a>
+        </div>
+    </div>
     </body>
 </html>
