--- a/exercises/restaurant/index.html
+++ b/exercises/restaurant/index.html
@@ -50,25 +50,24 @@
        <div id="footer">
         <div id="footer-columns-navbar">
             <div>
-                <a href="#">Column 1 Link</a>
-                <a href="#">Column 1 Link</a>
-                <a href="#">Column 1 Link</a>
-                <a href="#">Column 1 Link</a>
-                <a href="#">Column 1 Link</a>
+                <h3><i>RESTAURANT INFORMATION</i></h3>
+                <a href="#">Spaghetti Reworked Rewards</a>
+                <a href="#">About Us</a>
+                <a href="#">Careers</a>
+                <a href="#">Gift Cards</a>
+                <a href="#">Health & Saftey</a>
             </div>
             <div>
-                <a href="#">Column 2 Link</a>
-                <a href="#">Column 2 Link</a>
-                <a href="#">Column 2 Link</a>
-                <a href="#">Column 2 Link</a>
+                <h3> <i>SIGN UP FOR REWARDS</i> </h3>
+                <img src="../restaurant/images/secondary.png" al="second">
+                <a href="#"><i>Join Now</i></a>
             </div>
         </div>
         <div id="footer-navbar">
-            <span>&copy; FIRST 2023</span>
-            <a href="#">Footer Link 1</a>
-            <a href="#">Footer Link 2</a>
-            <a href="#">Footer Link 3</a>
-            <a href="#">Footer Link 4</a>
+            <a href="#">Terms of Use</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Web Accessibility</a>
+            <a href="#">Spaghetti Reworked™ Terms of Use</a>
         </div>
     </div>
     </body>
