--- a/exercises/restaurant/index.html
+++ b/exercises/restaurant/index.html
@@ -47,6 +47,20 @@
                 </a>
             </div>
        </div>
+       <div id="card-section">
+        <div class="sing-col card-contain">
+            <div class="card">
+                <h2>Rewards Sign-Up</h2>
+                <h4>Full Name</h4>
+                <span>typeintextherepleasetypeintexthereplease</span>
+                <h4>Phone</h4>
+                <span>typeintextherepleasetypeintexthereplease</span>
+                <h4>Email</h4>
+                <span>typeintextherepleasetypeintexthereplease</span>
+            </div>
+        </div>
+       </div>
+
        <div id="footer">
         <div id="footer-columns-navbar">
             <div>
