--- a/exercises/restaurant/menu.html
+++ b/exercises/restaurant/menu.html
@@ -9,16 +9,16 @@
     </head>
     <body>
        <div id="navbar">
-            <a id="logo" href="#">
+            <a id="logo" href="index.html">
                 <img src="../restaurant/images/transparentlogo.png" alt="logo">
             </a>
             <div class="dropdown">
                 <a href="#">Menu <i class="fa-solid fa-chevron-down"></i> </a>
                 <div class="menu">
-                    <a href="#">Full Menu</a>
-                    <a href="#">Main Courses</a>
-                    <a href="#">Sides & Soups</a>
-                    <a href="#">Drinks</a>
+                    <a href="menu.html">Full Menu</a>
+                    <a href="#section1">Main Courses</a>
+                    <a href="#section2">Sides & Soups</a>
+                    <a href="#section3">Drinks</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -47,8 +47,31 @@
                 </a>
             </div>
         </div>
+        <h1>Full Menu</h1>
         <div id="gallery-layout">
-            <h1>Full Menu</h1>
+            <h2 id="section1">Main Courses</h2>
+            <div class="gall">
+                <img src="images/pasta1.jpg" alt="pasta">
+                <img src="images/pasta2.jpg" alt="pasta">
+                <img src="images/pasta3.jpg" alt="pasta">
+                <img src="images/pasta2.jpg" alt="pasta">
+                <img src="images/pasta5.jpg" alt="pasta">
+                <img src="images/pasta6.jpg" alt="pasta">
+            </div>
+        </div>
+        <div id="gallery-layout">
+            <h2 id="section2">Sides & Soups</h2>
+            <div class="gall">
+                <img src="images/pasta1.jpg" alt="pasta">
+                <img src="images/pasta2.jpg" alt="pasta">
+                <img src="images/pasta3.jpg" alt="pasta">
+                <img src="images/pasta2.jpg" alt="pasta">
+                <img src="images/pasta5.jpg" alt="pasta">
+                <img src="images/pasta6.jpg" alt="pasta">
+            </div>
+        </div>
+        <div id="gallery-layout">
+            <h2 id="section3">Drinks</h2>
             <div class="gall">
                 <img src="images/pasta1.jpg" alt="pasta">
                 <img src="images/pasta2.jpg" alt="pasta">
