--- a/exercises/restaurant/index.html
+++ b/exercises/restaurant/index.html
@@ -15,10 +15,10 @@
             <div class="dropdown">
                 <a href="#">Menu <i class="fa-solid fa-chevron-down"></i> </a>
                 <div class="menu">
-                    <a href="#">Full Menu</a>
-                    <a href="#">Main Courses</a>
-                    <a href="#">Sides & Soups</a>
-                    <a href="#">Drinks</a>
+                    <a href="menu.html">Full Menu</a>
+                    <a href="menu.html#section1">Main Courses</a>
+                    <a href="menu.html#section2">Sides & Soups</a>
+                    <a href="menu.html#section3">Drinks</a>
                 </div>
             </div>
             <div class="dropdown">
