--- a/exercises/restaurant/menu.html
+++ b/exercises/restaurant/menu.html
@@ -51,34 +51,70 @@
         <div id="gallery-layout">
             <h2 id="section1">Main Courses</h2>
             <div class="gall">
-                <img src="images/pasta1.jpg" alt="pasta">
-                <img src="images/pasta2.jpg" alt="pasta">
-                <img src="images/pasta3.jpg" alt="pasta">
-                <img src="images/pasta2.jpg" alt="pasta">
-                <img src="images/pasta5.jpg" alt="pasta">
-                <img src="images/pasta6.jpg" alt="pasta">
+                <a href="#">
+                    <img src="images/pasta1.jpg" alt="pasta">
+                </a>
+                <a href="#">
+                    <img src="images/pasta2.jpg" alt="pasta">
+                </a>
+                <a href="#">
+                    <img src="images/pasta3.jpg" alt="pasta">
+                </a>
+                <a href="#">
+                    <img src="images/pasta4.jpg" alt="pasta">
+                </a>
+                <a href="#">
+                    <img src="images/pasta5.jpg" alt="pasta">
+                </a>
+                <a href="#">
+                    <img src="images/pasta6.jpg" alt="pasta">
+                </a>
             </div>
         </div>
         <div id="gallery-layout">
             <h2 id="section2">Sides & Soups</h2>
             <div class="gall">
-                <img src="images/pasta1.jpg" alt="pasta">
-                <img src="images/pasta2.jpg" alt="pasta">
-                <img src="images/pasta3.jpg" alt="pasta">
-                <img src="images/pasta2.jpg" alt="pasta">
-                <img src="images/pasta5.jpg" alt="pasta">
-                <img src="images/pasta6.jpg" alt="pasta">
+                <a href="#">
+                    <img src="images/side1.jpg" alt="side">
+                </a>
+                <a href="#">
+                    <img src="images/side2.jpg" alt="side">
+                </a>
+                <a href="#">
+                    <img src="images/side3.jpg" alt="side">
+                </a>
+                <a href="#">
+                    <img src="images/side4.jpg" alt="side">
+                </a>
+                <a href="#">
+                    <img src="images/side5.jpg" alt="side">
+                </a>
+                <a href="#">
+                    <img src="images/side6.jpg" alt="side">
+                </a>
             </div>
         </div>
         <div id="gallery-layout">
             <h2 id="section3">Drinks</h2>
             <div class="gall">
-                <img src="images/pasta1.jpg" alt="pasta">
-                <img src="images/pasta2.jpg" alt="pasta">
-                <img src="images/pasta3.jpg" alt="pasta">
-                <img src="images/pasta2.jpg" alt="pasta">
-                <img src="images/pasta5.jpg" alt="pasta">
-                <img src="images/pasta6.jpg" alt="pasta">
+                <a href="#">
+                    <img src="images/drink1.jpg" alt="pasta">
+                </a>
+                <a href="#">
+                    <img src="images/drink2.jpg" alt="pasta">
+                </a>
+                <a href="#">
+                    <img src="images/drink3.jpg" alt="pasta">
+                </a>
+                <a href="#">
+                    <img src="images/drink4.jpg" alt="pasta">
+                </a>
+                <a href="#">
+                    <img src="images/drink5.jpg" alt="pasta">
+                </a>
+                <a href="#">
+                    <img src="images/drink6.jpg" alt="pasta">
+                </a>
             </div>
         </div>
         <div id="footer">
