--- a/exercises/restaurant/index.html
+++ b/exercises/restaurant/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
        <div id="navbar">
-            <a id="logo" href="#">
+            <a id="logo" href="index.html">
                 <img src="../restaurant/images/transparentlogo.png" alt="logo">
             </a>
             <div class="dropdown">
