--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
             <a href="gallery.html">Gallery</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
+            <a href="https://dev-kaelyn-kluding-sandbox.pantheonsite.io/" target="_blank">Blog</a>
         </div>
     </body>
 </html>
